# autonomous-db-demos

./: .env_example  README.md  pyproject.toml
hybrid_vector_index/: ocigenai_hybrid_vector_index_queries copy.sql  ocigenai_queries.sql  onnx_hybrid_vector_index_queries.sql  onnx_queries.sql
hybrid_vector_index/setup/: 01_admin_prereqs.sql  01_create_profile.sql  02_load_onnx.sql  03_create_table_and_data.sql  04_create_hybrid_index.sql
mcp_server/: README.md  test_mcp_adb.py
mcp_server/sql/: 01_setup_admin.sql  02_setup_mcp_user.sql
